# pycon-korea-2023-presentation

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  b.py  c.py  main.py  pyproject.toml
test/: a.py
