[tool.poetry]
name = "pycon-korea-2023-presentation"
version = "1"
description = "PyCon Korea 2023"
authors = ["Taehyun Lee <0417taehyun@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "pycon_korea_2023_presentation"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"

[tool.poetry.group.linter.dependencies]
pre-commit = "^3.3.3"
mypy = "^1.4.1"
black = "^23.3.0"
isort = "^5.12.0"

[tool.poetry.group.web.dependencies]
uvicorn = "^0.22.0"
fastapi = "^0.100.0"

[tool.black]
line-length = 30

[tool.mypy]
exclude = [
    'test/',
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
